--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,144 +10,127 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.dusk.calculator.MainActivity">
 
-    <EditText
+    <Button
+        android:text="0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="10"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/editText"
-        android:hint="Enter a number" />
+        android:layout_below="@+id/Button_Seven"
+        android:layout_toRightOf="@+id/Button_Seven"
+        android:layout_toEndOf="@+id/Button_Seven"
+        android:onClick="NumericButtonOnClickListener"
+        android:id="@+id/Button_Zero" />
+
+    <Button
+        android:text="2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="NumericButtonOnClickListener"
+        android:id="@+id/Button_Two"
+        android:layout_alignBaseline="@+id/Button_One"
+        android:layout_alignBottom="@+id/Button_One"
+        android:layout_toRightOf="@+id/Button_One"
+        android:layout_toEndOf="@+id/Button_One" />
+
+    <Button
+        android:text="3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="NumericButtonOnClickListener"
+        android:id="@+id/Button_Three"
+        android:layout_alignBaseline="@+id/Button_Two"
+        android:layout_alignBottom="@+id/Button_Two"
+        android:layout_toRightOf="@+id/Button_Two"
+        android:layout_toEndOf="@+id/Button_Two" />
 
     <Button
         android:text="4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button"
-        android:layout_toLeftOf="@+id/button2"
-        android:layout_toStartOf="@+id/button2"
-        android:id="@+id/button4" />
+        android:layout_below="@+id/Button_One"
+        android:onClick="NumericButtonOnClickListener"
+        android:id="@+id/Button_Four" />
 
     <Button
         android:text="5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button2"
-        android:layout_toRightOf="@+id/button4"
-        android:layout_toEndOf="@+id/button4"
-        android:id="@+id/button5" />
+        android:onClick="NumericButtonOnClickListener"
+        android:id="@+id/Button_Five"
+        android:layout_alignBaseline="@+id/Button_Four"
+        android:layout_alignBottom="@+id/Button_Two"
+        android:layout_toRightOf="@+id/Button_Four"
+        android:layout_toEndOf="@+id/Button_Four" />
 
     <Button
         android:text="6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button2"
-        android:layout_alignRight="@+id/button3"
-        android:layout_alignEnd="@+id/button3"
-        android:id="@+id/button6" />
+        android:onClick="NumericButtonOnClickListener"
+        android:id="@+id/Button_Six"
+        android:layout_alignBaseline="@+id/button14"
+        android:layout_alignBottom="@+id/button14"
+        android:layout_toRightOf="@+id/Button_Five"
+        android:layout_toEndOf="@+id/Button_Five" />
 
     <Button
         android:text="7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button4"
-        android:layout_alignLeft="@+id/button4"
-        android:layout_alignStart="@+id/button4"
-        android:id="@+id/button7" />
+        android:layout_below="@+id/Button_Four"
+        android:layout_alignLeft="@+id/Button_Four"
+        android:layout_alignStart="@+id/Button_Four"
+        android:onClick="NumericButtonOnClickListener"
+        android:id="@+id/Button_Seven" />
 
     <Button
         android:text="8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button4"
-        android:layout_toRightOf="@+id/button4"
-        android:layout_toEndOf="@+id/button4"
-        android:id="@+id/button8" />
+        android:onClick="NumericButtonOnClickListener"
+        android:id="@+id/Button_Eight"
+        android:layout_alignBaseline="@+id/Button_Seven"
+        android:layout_alignBottom="@+id/Button_Seven"
+        android:layout_toRightOf="@+id/Button_Four"
+        android:layout_toEndOf="@+id/Button_Four" />
 
     <Button
         android:text="9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/button8"
-        android:layout_toRightOf="@+id/button5"
-        android:layout_toEndOf="@+id/button5"
-        android:id="@+id/button9" />
+        android:layout_alignBottom="@+id/Button_Eight"
+        android:layout_toRightOf="@+id/Button_Five"
+        android:layout_toEndOf="@+id/Button_Five"
+        android:onClick="NumericButtonOnClickListener"
+        android:id="@+id/Button_Nine" />
 
-    <Button
-        android:text="0"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/button7"
-        android:layout_toRightOf="@+id/button7"
-        android:layout_toEndOf="@+id/button7"
-        android:id="@+id/button10" />
+
 
     <Button
         android:text="."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/button10"
-        android:layout_alignLeft="@+id/button7"
-        android:layout_alignStart="@+id/button7"
+        android:layout_alignBottom="@+id/Button_Zero"
+        android:layout_alignLeft="@+id/Button_Seven"
+        android:layout_alignStart="@+id/Button_Seven"
+        android:onClick="NumericButtonOnClickListener"
         android:id="@+id/button11" />
 
     <Button
         android:text="-"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button8"
-        android:layout_toRightOf="@+id/button8"
-        android:layout_toEndOf="@+id/button8"
+        android:layout_below="@+id/Button_Eight"
+        android:layout_toRightOf="@+id/Button_Eight"
+        android:layout_toEndOf="@+id/Button_Eight"
         android:id="@+id/button12" />
-
-    <Button
-        android:text="3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button3"
-        android:layout_below="@+id/editText"
-        android:layout_alignRight="@+id/editText"
-        android:layout_alignEnd="@+id/editText"
-        android:layout_marginRight="18dp"
-        android:layout_marginEnd="18dp" />
-
-    <Button
-        android:text="2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button2"
-        android:layout_below="@+id/editText"
-        android:layout_toLeftOf="@+id/button3"
-        android:layout_toStartOf="@+id/button3" />
-
-    <Button
-        android:text="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button"
-        android:layout_alignBaseline="@+id/button2"
-        android:layout_alignBottom="@+id/button2"
-        android:layout_alignLeft="@+id/button4"
-        android:layout_alignStart="@+id/button4" />
-
-    <Button
-        android:text="+"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button13"
-        android:layout_alignBaseline="@+id/button3"
-        android:layout_alignBottom="@+id/button3"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
 
     <Button
         android:text="-"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/button13"
-        android:layout_toRightOf="@+id/button6"
-        android:layout_toEndOf="@+id/button6"
+        android:layout_toRightOf="@+id/Button_Six"
+        android:layout_toEndOf="@+id/Button_Six"
         android:id="@+id/button14" />
 
     <Button
@@ -155,16 +138,50 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/button14"
-        android:layout_toRightOf="@+id/button9"
-        android:layout_toEndOf="@+id/button9"
+        android:layout_toRightOf="@+id/Button_Nine"
+        android:layout_toEndOf="@+id/Button_Nine"
         android:id="@+id/button15" />
 
     <Button
         android:text="/"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button9"
+        android:layout_below="@+id/Button_Nine"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:id="@+id/button16" />
+
+    <Button
+        android:text="+"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button13"
+        android:layout_alignBaseline="@+id/Button_Three"
+        android:layout_alignBottom="@+id/Button_Three"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/textInput"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:text="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="NumericButtonOnClickListener"
+        android:id="@+id/Button_One"
+        android:layout_marginTop="15dp"
+        android:layout_below="@+id/textInput"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+
 </RelativeLayout>
