--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_toLeftOf="@id/dot"
-        android:layout_marginBottom="120dp"
+        android:layout_marginBottom="@dimen/activity_horizontal_margin"
         android:id="@+id/zero"
         android:contentDescription="Zero" />
 
@@ -28,7 +28,7 @@
         android:id="@+id/dot"
         android:layout_toLeftOf="@id/pi"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="120dp"/>
+        android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
 
     <Button
         android:text="pi"
@@ -37,7 +37,7 @@
         android:id="@+id/pi"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="120dp"/>
+        android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
 
     <Button
         android:text="ans"
@@ -46,7 +46,7 @@
         android:id="@+id/ans"
         android:layout_toRightOf="@id/pi"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="120dp"/>
+        android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
 
     <Button
         android:text="="
@@ -55,7 +55,7 @@
         android:id="@+id/equal"
         android:layout_toRightOf="@id/ans"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="120dp"/>
+        android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
 
     <Button
         android:text="3"
@@ -182,12 +182,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_above="@+id/editText2" />
+        android:layout_above="@+id/editText2"
+        android:layout_alignRight="@+id/editText2"
+        android:layout_alignEnd="@+id/editText2"
+        android:layout_alignLeft="@+id/editText2"
+        android:layout_alignStart="@+id/editText2" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -197,9 +197,9 @@
         android:layout_marginBottom="64dp"
         android:id="@+id/editText2"
         android:layout_above="@+id/nine"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignLeft="@+id/seven"
+        android:layout_alignStart="@+id/seven"
+        android:layout_alignRight="@+id/clear"
+        android:layout_alignEnd="@+id/clear" />
 
 </RelativeLayout>
