--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -123,7 +123,8 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/two"
         android:layout_toLeftOf="@+id/six"
-        android:id="@+id/five" />
+        android:id="@+id/five"
+        android:fontFamily="casual"/>
 
     <Button
         android:text="*"
@@ -149,7 +150,8 @@
         android:layout_height="wrap_content"
         android:layout_above="@id/one"
         android:layout_toLeftOf="@+id/five"
-        android:id="@+id/four" />
+        android:id="@+id/four"
+        android:fontFamily="casual"/>
 
     <Button
         android:text="9"
@@ -158,7 +160,8 @@
         android:layout_above="@+id/six"
         android:layout_centerHorizontal="true"
         android:id="@+id/nine"
-        android:fontFamily="casual"/>
+        android:fontFamily="casual"
+        />
 
     <Button
         android:text="8"
